test/field/set_on_bool.lox
true.foo = "value" // error: only instances have fields
